--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "dependencies": {
     "@nestjs/cli": "^11.0.10",
     "@nestjs/common": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
+    "@prisma/client": "^6.13.0",
+    "ioredis": "^5.7.0",
+    "prisma": "^6.13.0",
     "rxjs": "^7.8.2",
     "typescript": "^5.9.2"
   }
