--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.8'
 services:
   api:
-    build: ./api
+    build: ../api  
     ports: ['3000:3000']
     env_file: .env
     depends_on: [redis, postgres]
@@ -16,6 +15,6 @@ services:
       POSTGRES_DB: dtq
     ports: ['5432:5432']
   worker:
-    build: ./worker
+    build: ../worker 
     env_file: .env
     depends_on: [redis, api]
