--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "dev": "nodemon --watch src --exec ts-node -r tsconfig-paths/register src/main.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -49,6 +50,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "nodemon": "^3.1.10",
     "prettier": "^3.4.2",
     "prisma": "^6.14.0",
     "source-map-support": "^0.5.21",
