chore: setting up for week 3 implementation.

--- a/worker/package.json
+++ b/worker/package.json
@@ -1,7 +1,9 @@
 {
   "name": "worker",
-  "scripts": {
-    "start": "ts-node src/index.ts"
+ "scripts": {
+    "build": "tsc",
+    "start": "node dist/main.js",
+    "start:dev": "ts-node src/main.ts"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
