feat: working on scheduler and timezone calculation.

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     build: ../worker 
     env_file: .env
     depends_on: [redis, api]
-  # scheduler:
-  #   build: ../scheduler
-  #   env_file: .env
-  #   depends_on: [redis, api]
+  scheduler:
+    build: ../scheduler
+    env_file: .env
+    depends_on: [redis, api]
