--- a/api/package.json
+++ b/api/package.json
@@ -21,12 +21,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
+    "@nestjs/graphql": "^13.2.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "apollo-server-express": "^3.13.0",
+    "graphql": "^16.12.0",
     "ioredis": "^5.7.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
