--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   },
   "homepage": "https://github.com/fiyinfoluwa001/Distributed-Task-Queue#readme",
   "dependencies": {
+    "@nestjs/apollo": "^13.2.1",
     "@nestjs/cli": "^11.0.10",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
+    "@nestjs/graphql": "^13.2.0",
     "@prisma/client": "^6.13.0",
+    "apollo-server-express": "^3.13.0",
+    "graphql": "^16.12.0",
     "ioredis": "^5.7.0",
     "prisma": "^6.13.0",
     "rxjs": "^7.8.2",
