--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,24 +1,28 @@
+version: "3.8"
 services:
-  api:
-    build: ../api  
-    ports: ['3000:3000']
-    env_file: .env
-    depends_on: [redis, postgres]
-  redis:
-    image: redis:7
-    ports: ['6379:6379']
-  postgres:
-    image: postgres:16
+  mysql:
+    image: mysql:8.0
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
-      POSTGRES_DB: dtq
-    ports: ['5432:5432']
-  worker:
-    build: ../worker 
+      - MYSQL_ROOT_PASSWORD=rootpass
+      - MYSQL_DATABASE=dtq
+    ports: -["3306:3306"]
+    volumes: -['./mysql-data:/var/lib/mysql']
+
+  redis:
+    image: redis:7-alpine
+    ports: -["6379:6379"]
+  api:
+    build: ../api
+    ports: ["3000:3000"]
+    depends_on: [mysql, redis]
     env_file: .env
-    depends_on: [redis, api]
+  workers:
+    build: ../workers
+    depends_on:
+      - [redis, mysql]
+    deploy:
+      replicas: 1
   scheduler:
     build: ../scheduler
-    env_file: .env
-    depends_on: [redis, api]
+    depends_on:
+      - [api]
