--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "dtq-scheduler",
+  "name": "dtq",
   "version": "1.0.0",
-  "description": "A scalable backend for remote teams to schedule and process tasks with offline syncs, priority queue and fault tolerance.",
+  "description": "**A fault-tolerant, offline-first, priority-aware task queue built for remote teams**",
   "main": "index.js",
   "scripts": {
-    "api:dev": "cd api && npm run start:dev",
-    "worker:dev": "cd worker && npm run start"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,18 +19,8 @@
   },
   "homepage": "https://github.com/fiyinfoluwa001/Distributed-Task-Queue#readme",
   "dependencies": {
-    "@nestjs/apollo": "^13.2.1",
-    "@nestjs/cli": "^11.0.10",
-    "@nestjs/common": "^11.1.6",
-    "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.1.6",
-    "@nestjs/graphql": "^13.2.0",
-    "@prisma/client": "^6.13.0",
-    "apollo-server-express": "^3.13.0",
-    "graphql": "^16.12.0",
-    "ioredis": "^5.7.0",
-    "prisma": "^6.13.0",
-    "rxjs": "^7.8.2",
-    "typescript": "^5.9.2"
+    "@nestjs/cli": "^11.0.14",
+    "@prisma/client": "^6.19.0",
+    "prisma": "^6.19.0"
   }
 }
