--- a/package.json
+++ b/package.json
@@ -1,26 +1,103 @@
 {
-  "name": "dtq",
+  "name": "distributed-task-queue",
   "version": "1.0.0",
-  "description": "**A fault-tolerant, offline-first, priority-aware task queue built for remote teams**",
-  "main": "index.js",
+  "description": "Production-ready NestJS task queue system with GraphQL, MySQL, Redis, and distributed processing",
+  "author": "Fiyinfoluwa",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "migration:generate": "typeorm migration:generate -d src/config/typeorm.config.ts",
+    "migration:run": "typeorm migration:run -d src/config/typeorm.config.ts",
+    "migration:revert": "typeorm migration:revert -d src/config/typeorm.config.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fiyinfoluwa001/Distributed-Task-Queue.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/fiyinfoluwa001/Distributed-Task-Queue/issues"
-  },
-  "homepage": "https://github.com/fiyinfoluwa001/Distributed-Task-Queue#readme",
   "dependencies": {
-    "@nestjs/cli": "^11.0.14",
-    "@prisma/client": "^6.19.0",
-    "prisma": "^6.19.0"
+    "@nestjs/apollo": "^12.0.11",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/graphql": "^12.0.11",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/schedule": "^4.0.0",
+    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/throttler": "^5.1.1",
+    "@nestjs/typeorm": "^10.0.1",
+    "@apollo/server": "^4.9.5",
+    "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
+    "bullmq": "^5.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "graphql": "^16.8.1",
+    "graphql-subscriptions": "^2.0.0",
+    "ioredis": "^5.3.2",
+    "mysql2": "^3.7.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "prom-client": "^15.1.0",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.19",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.3.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
+    "@types/passport-jwt": "^4.0.0",
+    "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.3.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
