--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "migration:revert": "typeorm migration:revert -d src/config/typeorm.config.ts"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.5",
     "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
@@ -33,10 +34,8 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/schedule": "^4.0.0",
-    "@nestjs/swagger": "^7.1.17",
     "@nestjs/throttler": "^5.1.1",
-    "@nestjs/typeorm": "^10.0.1",
-    "@apollo/server": "^4.9.5",
+    "@prisma/client": "^7.1.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.0.0",
@@ -46,19 +45,17 @@
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
     "ioredis": "^5.3.2",
-    "mysql2": "^3.7.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prom-client": "^15.1.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.19",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.2.1",
+    "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.3.0",
     "@types/bcrypt": "^5.0.2",
@@ -76,6 +73,7 @@
     "eslint-plugin-prettier": "^5.1.2",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "prisma": "^7.1.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
