--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/schedule": "^6.0.1",
+    "@nestjs/testing": "^11.1.9",
     "@prisma/client": "^7.1.0",
+    "@types/uuid": "^10.0.0",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.65.1",
@@ -37,7 +39,8 @@
     "ioredis": "^5.8.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
