--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/schedule": "^6.0.1",
-    "@nestjs/testing": "^11.1.9",
     "@prisma/client": "^7.1.0",
     "@types/uuid": "^10.0.0",
     "@willsoto/nestjs-prometheus": "^6.0.2",
@@ -36,17 +35,25 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "graphql": "^16.12.0",
+    "graphql-redis-subscriptions": "^2.7.0",
+    "graphql-subscriptions": "^3.0.0",
     "ioredis": "^5.8.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prom-client": "^15.1.3",
+    "supertest": "^7.1.4",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@nestjs/testing": "^11.1.9",
     "@types/bcrypt": "^6.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
     "prisma": "^7.1.0",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
